fixed navbar covering header issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 
 html {
     font-size: 10px;
+    scroll-padding-top: 70px;
+
 }
 
 body {
